# FirstAI_ChatAgent

./: README.md  pyproject.toml
src/my_agent/: __init__.py  global_config.py
